# zeusdl

./: .gitignore  .replit  Untitled0.ipynb  replit.md
.github/: secret_scanning.yml
.github/workflows/: build.yml  build_all.yml  build_android_armv8.yml  build_android_binary.yml  zeusdl_new_wf.yml
attached_assets/: site-ma.bangbros.com_cookies_1777777259626.txt
client/: .gitignore  analysis_options.yaml  pubspec.yaml
client/lib/: main.dart
client/linux/: CMakeLists.txt  my_application.cc  my_application.h
client/windows/: CMakeLists.txt
client/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp  resource.h  runner.exe.manifest  utils.cpp  utils.h  win32_window.cpp  win32_window.h
downloads/: scene_10296661_manifest.json  scene_10296721_manifest.json  scene_10296751_manifest.json
scripts/: build_all.sh  build_android_armv8.sh  post-merge.sh
zeusdl/: CONTRIBUTING.md  Maintainers.md  README.md  pyproject.toml  supportedsites.md  zeus_mastermind.py  zeusdl.sh
zeusdl/.github/: PULL_REQUEST_TEMPLATE.md
zeusdl/devscripts/: bash-completion.py  generate_third_party_licenses.py  install_deps.py  make_changelog.py  make_lazy_extractors.py  make_readme.py  make_supportedsites.py  prepare_manpage.py  run_tests.py  setup_variables.py  update_bundle_requirements.py
zeusdl/download_manager/: __init__.py  queue_manager.py  session.py  task.py
zeusdl/zeusdl/: Changelog.md  README.md  THIRD_PARTY_LICENSES.txt  YoutubeDL.py  ZeusDL_Colab.ipynb  __main__.py  cache.py  jsinterp.py  options.py  pyproject.toml  zeus_engine.py  zeusdl.cmd
(+208 files in other folders)
